implement async_connection and sync_connection with radar by boost.asio.tcp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,9 @@ project(radar_tcp)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(radar_tcp main.cpp)
+add_executable(radar_tcp main.cpp Radar_Data.h)
 find_package(Threads REQUIRED)
 target_link_libraries(radar_tcp Threads::Threads)
+add_executable(sync_server sync_server.cpp Radar_Data.h)
+find_package(Threads REQUIRED)
+target_link_libraries(sync_server Threads::Threads)
